--- a/smart-watch-showcase/index.css
+++ b/smart-watch-showcase/index.css
@@ -29,14 +29,11 @@ div {
     clear: both;
 }
 
-.container {
-    position: relative;
-}
-
 .column1 {
     float: left;
     width: 40%;
-    text-align: right;
+    text-align: center;
+    position: relative;
 }
 
 .column2 {
@@ -48,27 +45,31 @@ div {
     text-align: left;
 }
 
-.v-span {
-    margin-top: 50px;
-}
-
 .smart-watch {
+    display: block;
+    margin: auto;
+    position: relative;
     width: 80%;
     height: 50%;
 }
 
-.text-block {
+.top-image {
     position: absolute;
-    bottom: 50%;
-    right: 27.5%;
-    background-color: black;
-    color: white;
-    padding-left: 20px;
-    padding-right: 20px;
+    /*bottom: 45%;*/
+    text-align: center;
+    /*right: 40%;*/
+    background-color: rgba(256, 256, 256, 0);
+    color: red;
 }
 
-/* Button */
+.heart {
+    width: 20%;
+    height: 25%;
+}
+
+/* Buttons */
 .round-button {
+    font-weight: bold;
     border-radius: 8px;
     margin-right: 10px;
     font-weight: bold;
